Modified the individual post layout to get correctly displayed on mobile and tweaked the UI a little bit.

--- a/assets/css/darkTheme.css
+++ b/assets/css/darkTheme.css
@@ -40,5 +40,8 @@ a {
 }
 
 #postMainContentContainer {
-  background-color: #1b2631 ;
+  background-color: #383838;
+  border-left-style: solid;
+  border-left-color:#212121;
+  border-left-width: 8px;
 }
